# ragflow-claude-desktop-local-mcp

./: .coverage  .coveragerc  .gitignore  CLAUDE.md  COMMIT_SIGNING.md  CONTRIBUTING.md  README.md  config.json.sample  dagger.json  pyproject.toml  search_ragflow.sh
.dagger/: .gitignore  pyproject.toml
.dagger/src/ci/: __init__.py  main.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bandit.yml  codeql.yml  release.yml  tests.yml  trufflehog.yml
docs/: COMMIT_SIGNING.md
scripts/legacy/: deeper_search_ragflow.sh  deeper_search_reranked_ragflow.sh
src/ragflow_claude_mcp/: __init__.py  cache.py  dspy_deepening.py  exceptions.py  logging_config.py  server.py  validation.py
src/ragflow_claude_mcp/client/: __init__.py  ragflow.py
src/ragflow_claude_mcp/common/: __init__.py  cache.py  exceptions.py  flags.py  validation.py
src/ragflow_claude_mcp/dspy/: __init__.py  deepening.py
tests/: test_server.py
