[project]
name = "ragflow-claude-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marius Ciepluch", email = "11855163+norandom@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "mcp>=1.10.1",
    "dspy-ai>=2.5.0",
    "dspy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
ragflow-claude-mcp = "ragflow_claude_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
dspy = { git = "https://github.com/stanfordnlp/dspy.git" }
